packages/compiler/test/errors/temporal-dead-zone/assignment-before-decl/code.js
function f() {
  x = foo();
  let x;
}
